<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/layout_1_desc"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="54dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textSize="18sp"  />

        <EditText
            android:id="@+id/editText"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText"
            android:layout_toEndOf="@+id/editText"
            android:text="@string/press_me" />

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="138dp"
        android:layout_height="9dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="209dp"
        android:background="@android:color/darker_gray" />

    <RadioGroup
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/view2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="111dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alternative_1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alternative_2" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="168dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/option_1" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/option_2" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/option_3" />
    </LinearLayout>
</RelativeLayout>